--- a/.github/workflows/express-app.yml
+++ b/.github/workflows/express-app.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -27,4 +27,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         push: true
-        tags: ailearn/express-app:latest
+        tags: user/app:latest
+
+    - name: Trigger Render deployment
+      run: curl -X GET ${{ secrets.RENDER_HOOK }}
