--- a/.github/workflows/express-app.yml
+++ b/.github/workflows/express-app.yml
@@ -27,7 +27,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         push: true
-        tags: user/app:latest
+        tags: ailearn/express-app:latest
 
-    - name: Trigger Render deployment
+    - name: Trigger Render deploymen
       run: curl -X GET ${{ secrets.RENDER_HOOK }}
